tests/ui/macros/macro-in-expression-context.stderr
error: macro expansion ignores `;` and any tokens following
  --> $DIR/macro-in-expression-context.rs:5:29
   |
LL |         assert_eq!("A", "A");
   |                             ^
...
LL |     foo!()
   |     ------ caused by the macro expansion here
   |
   = note: the usage of `foo!` is likely invalid in expression context
help: you might be missing a semicolon here
   |
LL |     foo!();
   |           +

error: aborting due to 1 previous error

